Update frontmatter in drafts
Drop duplicate keys in refs

	deleted:    docs/blog/drafts/2020-01-01-SSIFellowship.md
	deleted:    docs/blog/drafts/2020-01-01-Turing-Time.md
	renamed:    docs/blog/drafts/2020-01-01-Branching-Models.md -> docs/blog/drafts/branching-models.md
	renamed:    docs/blog/drafts/2020-06-12-Breaking-Habits.md -> docs/blog/drafts/breaking-habits.md
	renamed:    docs/blog/drafts/2020-05-21-DBDS-Deep-Dive.md -> docs/blog/drafts/dbds-deep-dive.md
	renamed:    docs/blog/drafts/2020-06-12-DL-Deep-Dive.md -> docs/blog/drafts/dl-deep-dive.md
	renamed:    docs/blog/drafts/2020-06-10-Environmental-Issues.md -> docs/blog/drafts/environmental-issues.md
	renamed:    docs/blog/drafts/2020-06-10-Release-Versioning.md -> docs/blog/drafts/release-versioning.md
	new file:   docs/blog/drafts/ssi-fellowship.md
	new file:   docs/blog/drafts/turing-time.md
	modified:   refs.bib

--- a/refs.bib
+++ b/refs.bib
@@ -195,13 +195,6 @@
   year={2013}
 }
 
-@book{he2013imbalanced,
-    title={Imbalanced learning: foundations, algorithms, and applications},
-    author={He, Haibo and Ma, Yunqian},
-    year={2013},
-    publisher={John Wiley \& Sons}
-}
-
 @article{karpenka2013simple,
   title={A simple and robust method for automated photometric classification of supernovae using neural networks},
   author={Karpenka, Natalia V and Feroz, F and Hobson, MP},
@@ -235,10 +228,10 @@
 @article{hodlr,
     author = {{Ambikasaran}, S. and {Foreman-Mackey}, D. and
               {Greengard}, L. and {Hogg}, D.~W. and {O'Neil}, M.},
-     title = "{Fast Direct Methods for Gaussian Processes}",
-      year = 2014,
-     month = mar,
-       url = http://arxiv.org/abs/1403.6015
+     title = {Fast Direct Methods for Gaussian Processes},
+      year = {2014},
+     month = {mar},
+       url = {http://arxiv.org/abs/1403.6015}
 }
 
 @article{srivastava2014dropout,
@@ -473,16 +466,6 @@
     year={2017},
     organization={IEEE}
 }
-@article{JMLR:v18:16-365,
-    author  = {Guillaume  Lema{{\^i}}tre and Fernando Nogueira and Christos K. Aridas},
-    title   = {Imbalanced-learn: A Python Toolbox to Tackle the Curse of Imbalanced Datasets in Machine Learning},
-    journal = {Journal of Machine Learning Research},
-    year    = {2017},
-    volume  = {18},
-    number  = {17},
-    pages   = {1-5},
-    url     = {http://jmlr.org/papers/v18/16-365}
-}
 
 ====== 2018 ======
 
@@ -633,14 +616,6 @@
 @misc{team2019unblinded,
     title={Unblinded Data for PLAsTiCC Classifi cation Challenge, doi: 10.5281/zenodo. 2539456},
     author={Team, PLAsTiCC and Modelers, PLAsTiCC},
-    year={2019}
-}
-
-@inproceedings{akiba2019optuna,
-    title={Optuna: A next-generation hyperparameter optimization framework},
-    author={Akiba, Takuya and Sano, Shotaro and Yanase, Toshihiko and Ohta, Takeru and Koyama, Masanori},
-    booktitle={Proceedings of the 25th ACM SIGKDD international conference on knowledge discovery \& data mining},
-    pages={2623--2631},
     year={2019}
 }
 
