Reformat refs file and update a heading in post
	modified:   refs.bib
	modified:   src/blog/2020/pyspark-by-example.md

--- a/refs.bib
+++ b/refs.bib
@@ -1,23 +1,23 @@
 ====== pre-1990 ======
 
 @article{shannon:1949,
-    author    = "{Shannon, C. E.}",
-    title     = "Communication in the presence of noise",
-    journal   = "{Proc.\ IRE}",
-    volume    = "37",
-    year      = "1949",
-    pages     = "10--21"
+    author={Shannon, C. E.},
+    title={Communication in the presence of noise},
+    journal={Proc.\ IRE},
+    volume={37},
+    year={1949},
+    pages={10--21}
 }
 
 @article{rumelhart1986learning,
-  title={Learning representations by back-propagating errors},
-  author={Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J},
-  journal={nature},
-  volume={323},
-  number={6088},
-  pages={533--536},
-  year={1986},
-  publisher={Nature Publishing Group}
+    title={Learning representations by back-propagating errors},
+    author={Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J},
+    journal={nature},
+    volume={323},
+    number={6088},
+    pages={533--536},
+    year={1986},
+    publisher={Nature Publishing Group}
 }
 
 ====== 1990 ======
@@ -46,20 +46,20 @@
 
 ====== 2000 ======
 @article{skodras2001jpeg,
-  title={The jpeg 2000 still image compression standard},
-  author={Skodras, Athanassios and Christopoulos, Charilaos and Ebrahimi, Touradj},
-  journal={IEEE Signal processing magazine},
-  volume={18},
-  number={5},
-  pages={36--58},
-  year={2001},
-  publisher={IEEE}
+    title={The jpeg 2000 still image compression standard},
+    author={Skodras, Athanassios and Christopoulos, Charilaos and Ebrahimi, Touradj},
+    journal={IEEE Signal processing magazine},
+    volume={18},
+    number={5},
+    pages={36--58},
+    year={2001},
+    publisher={IEEE}
 }
 @misc{hochreiter2001gradient,
-  title={Gradient flow in recurrent nets: the difficulty of learning long-term dependencies},
-  author={Hochreiter, Sepp and Bengio, Yoshua and Frasconi, Paolo and Schmidhuber, J{\"u}rgen and others},
-  year={2001},
-  publisher={A field guide to dynamical recurrent neural networks. IEEE Press}
+    title={Gradient flow in recurrent nets: the difficulty of learning long-term dependencies},
+    author={Hochreiter, Sepp and Bengio, Yoshua and Frasconi, Paolo and Schmidhuber, J{\"u}rgen and others},
+    year={2001},
+    publisher={A field guide to dynamical recurrent neural networks. IEEE Press}
 }
 
 @article{duda2001pattern,
@@ -104,20 +104,20 @@
 ====== 2010 ======
 
 @InProceedings{mckinney-proc-scipy-2010,
-  author    = { {W}es {M}c{K}inney },
-  title     = { {D}ata {S}tructures for {S}tatistical {C}omputing in {P}ython },
-  booktitle = { {P}roceedings of the 9th {P}ython in {S}cience {C}onference },
-  pages     = { 56 - 61 },
-  year      = { 2010 },
-  editor    = { {S}t\'efan van der {W}alt and {J}arrod {M}illman },
-  doi       = { 10.25080/Majora-92bf1922-00a }
+    author    = { {W}es {M}c{K}inney },
+    title     = { {D}ata {S}tructures for {S}tatistical {C}omputing in {P}ython },
+    booktitle = { {P}roceedings of the 9th {P}ython in {S}cience {C}onference },
+    pages     = { 56 - 61 },
+    year      = { 2010 },
+    editor    = { {S}t\'efan van der {W}alt and {J}arrod {M}illman },
+    doi       = { 10.25080/Majora-92bf1922-00a }
 }
 
 @inproceedings{nair2010rectified,
-  title={Rectified linear units improve restricted boltzmann machines},
-  author={Nair, Vinod and Hinton, Geoffrey E},
-  booktitle={Icml},
-  year={2010}
+    title={Rectified linear units improve restricted boltzmann machines},
+    author={Nair, Vinod and Hinton, Geoffrey E},
+    booktitle={Icml},
+    year={2010}
 }
 
 @book{amendola2010dark,
@@ -148,12 +148,12 @@
 ====== 2011 ======
 
 @inproceedings{bergstra2011algorithms,
-  title={Algorithms for hyper-parameter optimization},
-  author={Bergstra, James and Bardenet, R{\'e}mi and Bengio, Yoshua and K{\'e}gl, Bal{\'a}zs},
-  booktitle={25th annual conference on neural information processing systems (NIPS 2011)},
-  volume={24},
-  year={2011},
-  organization={Neural Information Processing Systems Foundation}
+    title={Algorithms for hyper-parameter optimization},
+    author={Bergstra, James and Bardenet, R{\'e}mi and Bengio, Yoshua and K{\'e}gl, Bal{\'a}zs},
+    booktitle={25th annual conference on neural information processing systems (NIPS 2011)},
+    volume={24},
+    year={2011},
+    organization={Neural Information Processing Systems Foundation}
 }
 @book{sutton2011observational,
     title={Observational astronomy: techniques and instrumentation},
@@ -174,75 +174,74 @@
 ====== 2013 ======
 
 @article{lin2013network,
-  title={Network in network},
-  author={Lin, Min and Chen, Qiang and Yan, Shuicheng},
-  journal={arXiv preprint arXiv:1312.4400},
-  year={2013}
+    title={Network in network},
+    author={Lin, Min and Chen, Qiang and Yan, Shuicheng},
+    journal={arXiv preprint arXiv:1312.4400},
+    year={2013}
 }
 
 @book{matern2013spatial,
-  title={Spatial variation},
-  author={Mat{\'e}rn, Bertil},
-  volume={36},
-  year={2013},
-  publisher={Springer Science \& Business Media}
+    title={Spatial variation},
+    author={Mat{\'e}rn, Bertil},
+    volume={36},
+    year={2013},
+    publisher={Springer Science \& Business Media}
 }
 
 @article{mikolov2013efficient,
-  title={Efficient estimation of word representations in vector space},
-  author={Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
-  journal={arXiv preprint arXiv:1301.3781},
-  year={2013}
+    title={Efficient estimation of word representations in vector space},
+    author={Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
+    journal={arXiv preprint arXiv:1301.3781},
+    year={2013}
 }
 
 @article{karpenka2013simple,
-  title={A simple and robust method for automated photometric classification of supernovae using neural networks},
-  author={Karpenka, Natalia V and Feroz, F and Hobson, MP},
-  journal={Monthly Notices of the Royal Astronomical Society},
-  volume={429},
-  number={2},
-  pages={1278--1285},
-  year={2013},
-  publisher={The Royal Astronomical Society}
+    title={A simple and robust method for automated photometric classification of supernovae using neural networks},
+    author={Karpenka, Natalia V and Feroz, F and Hobson, MP},
+    journal={Monthly Notices of the Royal Astronomical Society},
+    volume={429},
+    number={2},
+    pages={1278--1285},
+    year={2013},
+    publisher={The Royal Astronomical Society}
 }
 
 @article{ishida2013kernel,
-  title={Kernel PCA for Type Ia supernovae photometric classification},
-  author={Ishida, Emille EO and de Souza, Rafael S},
-  journal={Monthly Notices of the Royal Astronomical Society},
-  volume={430},
-  number={1},
-  pages={509--532},
-  year={2013},
-  publisher={Oxford University Press}
+    title={Kernel PCA for Type Ia supernovae photometric classification},
+    author={Ishida, Emille EO and de Souza, Rafael S},
+    journal={Monthly Notices of the Royal Astronomical Society},
+    volume={430},
+    number={1},
+    pages={509--532},
+    year={2013},
+    publisher={Oxford University Press}
 }
 
 @article{he2013imbalanced,
-  title={Imbalanced learning: foundations, algorithms, and applications},
-  author={He, Haibo and Ma, Yunqian},
-  year={2013},
-  publisher={John Wiley \& Sons}
+    title={Imbalanced learning: foundations, algorithms, and applications},
+    author={He, Haibo and Ma, Yunqian},
+    year={2013},
+    publisher={John Wiley \& Sons}
 }
 ====== 2014 ======
 
 @article{hodlr,
-    author = {{Ambikasaran}, S. and {Foreman-Mackey}, D. and
-              {Greengard}, L. and {Hogg}, D.~W. and {O'Neil}, M.},
-     title = {Fast Direct Methods for Gaussian Processes},
-      year = {2014},
-     month = {mar},
-       url = {http://arxiv.org/abs/1403.6015}
+    author = {{Ambikasaran}, S. and {Foreman-Mackey}, D. and {Greengard}, L. and {Hogg}, D.~W. and {O'Neil}, M.},
+    title = {Fast Direct Methods for Gaussian Processes},
+    year = {2014},
+    month = {mar},
+    url = {http://arxiv.org/abs/1403.6015}
 }
 
 @article{srivastava2014dropout,
-  title={Dropout: a simple way to prevent neural networks from overfitting},
-  author={Srivastava, Nitish and Hinton, Geoffrey and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
-  journal={The journal of machine learning research},
-  volume={15},
-  number={1},
-  pages={1929--1958},
-  year={2014},
-  publisher={JMLR. org}
+    title={Dropout: a simple way to prevent neural networks from overfitting},
+    author={Srivastava, Nitish and Hinton, Geoffrey and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
+    journal={The journal of machine learning research},
+    volume={15},
+    number={1},
+    pages={1929--1958},
+    year={2014},
+    publisher={JMLR. org}
 }
 @article{betoule2014improved,
     title={Improved cosmological constraints from a joint analysis of the SDSS-II and SNLS supernova samples},
@@ -262,48 +261,48 @@
 }
 
 @article{sutskever2014sequence,
-  title={Sequence to sequence learning with neural networks},
-  author={Sutskever, Ilya and Vinyals, Oriol and Le, Quoc V},
-  journal={arXiv preprint arXiv:1409.3215},
-  year={2014}
+    title={Sequence to sequence learning with neural networks},
+    author={Sutskever, Ilya and Vinyals, Oriol and Le, Quoc V},
+    journal={arXiv preprint arXiv:1409.3215},
+    year={2014}
 }
 
 @article{bahdanau2014neural,
-  title={Neural machine translation by jointly learning to align and translate},
-  author={Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
-  journal={arXiv preprint arXiv:1409.0473},
-  year={2014}
+    title={Neural machine translation by jointly learning to align and translate},
+    author={Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
+    journal={arXiv preprint arXiv:1409.0473},
+    year={2014}
 }
 
 ====== 2015 ======
 
 @article{dong2015image,
-  title={Image super-resolution using deep convolutional networks},
-  author={Dong, Chao and Loy, Chen Change and He, Kaiming and Tang, Xiaoou},
-  journal={IEEE transactions on pattern analysis and machine intelligence},
-  volume={38},
-  number={2},
-  pages={295--307},
-  year={2015},
-  publisher={IEEE}
+    title={Image super-resolution using deep convolutional networks},
+    author={Dong, Chao and Loy, Chen Change and He, Kaiming and Tang, Xiaoou},
+    journal={IEEE transactions on pattern analysis and machine intelligence},
+    volume={38},
+    number={2},
+    pages={295--307},
+    year={2015},
+    publisher={IEEE}
 }
 
 @article{luong2015effective,
-  title={Effective approaches to attention-based neural machine translation},
-  author={Luong, Minh-Thang and Pham, Hieu and Manning, Christopher D},
-  journal={arXiv preprint arXiv:1508.04025},
-  year={2015}
+    title={Effective approaches to attention-based neural machine translation},
+    author={Luong, Minh-Thang and Pham, Hieu and Manning, Christopher D},
+    journal={arXiv preprint arXiv:1508.04025},
+    year={2015}
 }
 
 @article{varughese2015non,
-  title={Non-parametric transient classification using adaptive wavelets},
-  author={Varughese, Melvin M and von Sachs, Rainer and Stephanou, Michael and Bassett, Bruce A},
-  journal={Monthly Notices of the Royal Astronomical Society},
-  volume={453},
-  number={3},
-  pages={2848--2861},
-  year={2015},
-  publisher={Oxford University Press}
+    title={Non-parametric transient classification using adaptive wavelets},
+    author={Varughese, Melvin M and von Sachs, Rainer and Stephanou, Michael and Bassett, Bruce A},
+    journal={Monthly Notices of the Royal Astronomical Society},
+    volume={453},
+    number={3},
+    pages={2848--2861},
+    year={2015},
+    publisher={Oxford University Press}
 }
 @misc{chollet2015keras,
     title={Keras},
@@ -361,9 +360,9 @@
 }
 
 @misc{szegedy2015rethinking,
-  title={Rethinking the inception architecture for computer vision. CoRR abs/1512.00567 (2015)},
-  author={Szegedy, Christian and Vanhoucke, Vincent and Ioffe, Sergey and Shlens, Jonathon and Wojna, Zbigniew},
-  year={2015}
+    title={Rethinking the inception architecture for computer vision. CoRR abs/1512.00567 (2015)},
+    author={Szegedy, Christian and Vanhoucke, Vincent and Ioffe, Sergey and Shlens, Jonathon and Wojna, Zbigniew},
+    year={2015}
 }
 
 @article{zhou2015cnnlocalization,
@@ -374,18 +373,18 @@
 }
 
 @article{branco2015survey,
-  title={A survey of predictive modelling under imbalanced distributions},
-  author={Branco, Paula and Torgo, Luis and Ribeiro, Rita},
-  journal={arXiv preprint arXiv:1505.01658},
-  year={2015}
+    title={A survey of predictive modelling under imbalanced distributions},
+    author={Branco, Paula and Torgo, Luis and Ribeiro, Rita},
+    journal={arXiv preprint arXiv:1505.01658},
+    year={2015}
 }
 ====== 2016 ======
 
 @article{ba2016layer,
-  title={Layer normalization},
-  author={Ba, Jimmy Lei and Kiros, Jamie Ryan and Hinton, Geoffrey E},
-  journal={arXiv preprint arXiv:1607.06450},
-  year={2016}
+    title={Layer normalization},
+    author={Ba, Jimmy Lei and Kiros, Jamie Ryan and Hinton, Geoffrey E},
+    journal={arXiv preprint arXiv:1607.06450},
+    year={2016}
 }
 
 @article{lochner2016photometric,
@@ -400,17 +399,17 @@
 }
 
 @article{oord2016wavenet,
-  title={Wavenet: A generative model for raw audio},
-  author={Oord, Aaron van den and Dieleman, Sander and Zen, Heiga and Simonyan, Karen and Vinyals, Oriol and Graves, Alex and Kalchbrenner, Nal and Senior, Andrew and Kavukcuoglu, Koray},
-  journal={arXiv preprint arXiv:1609.03499},
-  year={2016}
+    title={Wavenet: A generative model for raw audio},
+    author={Oord, Aaron van den and Dieleman, Sander and Zen, Heiga and Simonyan, Karen and Vinyals, Oriol and Graves, Alex and Kalchbrenner, Nal and Senior, Andrew and Kavukcuoglu, Koray},
+    journal={arXiv preprint arXiv:1609.03499},
+    year={2016}
 }
 
 @article{cheng2016long,
-  title={Long short-term memory-networks for machine reading},
-  author={Cheng, Jianpeng and Dong, Li and Lapata, Mirella},
-  journal={arXiv preprint arXiv:1601.06733},
-  year={2016}
+    title={Long short-term memory-networks for machine reading},
+    author={Cheng, Jianpeng and Dong, Li and Lapata, Mirella},
+    journal={arXiv preprint arXiv:1601.06733},
+    year={2016}
 }
 ====== 2017 ======
 
@@ -470,18 +469,18 @@
 ====== 2018 ======
 
 @article{allam2018optimising,
-  title={Optimising the LSST Observing Strategy for Supernova Light Curve Classification with Machine Learning},
-  author={\textbf{Allam Jr, Tarek} and Biswas, Rahul and Hlozek, Ren{\'e}e and Lochner, Michelle and McEwen,
-      Jason D and Peiris, Hiranya and Setzer, Christian},
-  year={2018}
+    title={Optimising the LSST Observing Strategy for Supernova Light Curve Classification with Machine Learning},
+    author={\textbf{Allam Jr, Tarek} and Biswas, Rahul and Hlozek, Ren{\'e}e and Lochner, Michelle and McEwen,
+        Jason D and Peiris, Hiranya and Setzer, Christian},
+    year={2018}
 }
 
 @book{fernandez2018learning,
-  title={Learning from imbalanced data sets},
-  author={Fern{\'a}ndez, Alberto and Garc{\'\i}a, Salvador and Galar, Mikel and Prati, Ronaldo C and Krawczyk, Bartosz and Herrera, Francisco},
-  volume={11},
-  year={2018},
-  publisher={Springer}
+    title={Learning from imbalanced data sets},
+    author={Fern{\'a}ndez, Alberto and Garc{\'\i}a, Salvador and Galar, Mikel and Prati, Ronaldo C and Krawczyk, Bartosz and Herrera, Francisco},
+    volume={11},
+    year={2018},
+    publisher={Springer}
 }
 
 @article{allam2018photometric,
@@ -551,66 +550,66 @@
 }
 
 @article{revsbech2018staccato,
-  title={STACCATO: a novel solution to supernova photometric classification with biased training sets},
-  author={Revsbech, Esben A and Trotta, Roberto and van Dyk, David A},
-  journal={Monthly Notices of the Royal Astronomical Society},
-  volume={473},
-  number={3},
-  pages={3969--3986},
-  year={2018},
-  publisher={Oxford University Press}
+    title={STACCATO: a novel solution to supernova photometric classification with biased training sets},
+    author={Revsbech, Esben A and Trotta, Roberto and van Dyk, David A},
+    journal={Monthly Notices of the Royal Astronomical Society},
+    volume={473},
+    number={3},
+    pages={3969--3986},
+    year={2018},
+    publisher={Oxford University Press}
 }
 
 @online{koehrsen2018bayesianoptimise,
-  author = {Will Koehrsen},
-  title = {A Conceptual Explanation of Bayesian Hyperparameter Optimization for Machine Learning},
-  year = 2018,
-  url = {https://bit.ly/3cAyhTd},
-  urldate = {2021-03-10}
+    author = {Will Koehrsen},
+    title = {A Conceptual Explanation of Bayesian Hyperparameter Optimization for Machine Learning},
+    year = 2018,
+    url = {https://bit.ly/3cAyhTd},
+    urldate = {2021-03-10}
 }
 ====== 2019 ======
 
 @article{kessler2019models,
-  title={Models and simulations for the photometric LSST astronomical time series classification challenge (PLAsTiCC)},
-  author={Kessler, R and Narayan, G and Avelino, A and Bachelet, E and Biswas, Rahul and Brown, PJ and Chernoff, DF and Connolly, AJ and Dai, M and Daniel, S and others},
-  journal={Publications of the Astronomical Society of the Pacific},
-  volume={131},
-  number={1003},
-  pages={094501},
-  year={2019},
-  publisher={IOP Publishing}
+    title={Models and simulations for the photometric LSST astronomical time series classification challenge (PLAsTiCC)},
+    author={Kessler, R and Narayan, G and Avelino, A and Bachelet, E and Biswas, Rahul and Brown, PJ and Chernoff, DF and Connolly, AJ and Dai, M and Daniel, S and others},
+    journal={Publications of the Astronomical Society of the Pacific},
+    volume={131},
+    number={1003},
+    pages={094501},
+    year={2019},
+    publisher={IOP Publishing}
 }
 @article{meyes2019ablation,
-  title={Ablation studies in artificial neural networks},
-  author={Meyes, Richard and Lu, Melanie and de Puiseau, Constantin Waubert and Meisen, Tobias},
-  journal={arXiv preprint arXiv:1901.08644},
-  year={2019}
+    title={Ablation studies in artificial neural networks},
+    author={Meyes, Richard and Lu, Melanie and de Puiseau, Constantin Waubert and Meisen, Tobias},
+    journal={arXiv preprint arXiv:1901.08644},
+    year={2019}
 }
 
 @inproceedings{akiba2019optuna,
-  title={Optuna: A next-generation hyperparameter optimization framework},
-  author={Akiba, Takuya and Sano, Shotaro and Yanase, Toshihiko and Ohta, Takeru and Koyama, Masanori},
-  booktitle={Proceedings of the 25th ACM SIGKDD international conference on knowledge discovery \& data mining},
-  pages={2623--2631},
-  year={2019}
+    title={Optuna: A next-generation hyperparameter optimization framework},
+    author={Akiba, Takuya and Sano, Shotaro and Yanase, Toshihiko and Ohta, Takeru and Koyama, Masanori},
+    booktitle={Proceedings of the 25th ACM SIGKDD international conference on knowledge discovery \& data mining},
+    pages={2623--2631},
+    year={2019}
 }
 
 @book{geron2019hands,
-  title={Hands-on machine learning with Scikit-Learn, Keras, and TensorFlow: Concepts, tools, and techniques to build intelligent systems},
-  author={G{\'e}ron, Aur{\'e}lien},
-  year={2019},
-  publisher={O'Reilly Media}
+    title={Hands-on machine learning with Scikit-Learn, Keras, and TensorFlow: Concepts, tools, and techniques to build intelligent systems},
+    author={G{\'e}ron, Aur{\'e}lien},
+    year={2019},
+    publisher={O'Reilly Media}
 }
 
 @article{brunel2019cnn,
-  title={A CNN adapted to time series for the classification of Supernovae},
-  author={Brunel, Anthony and Pasquet, Johanna and PASQUET, J{\'e}r{\^o}ome and Rodriguez, Nancy and Comby, Fr{\'e}d{\'e}ric and Fouchez, Dominique and Chaumont, Marc},
-  journal={Electronic imaging},
-  volume={2019},
-  number={14},
-  pages={90--1},
-  year={2019},
-  publisher={Society for Imaging Science and Technology}
+    title={A CNN adapted to time series for the classification of Supernovae},
+    author={Brunel, Anthony and Pasquet, Johanna and PASQUET, J{\'e}r{\^o}ome and Rodriguez, Nancy and Comby, Fr{\'e}d{\'e}ric and Fouchez, Dominique and Chaumont, Marc},
+    journal={Electronic imaging},
+    volume={2019},
+    number={14},
+    pages={90--1},
+    year={2019},
+    publisher={Society for Imaging Science and Technology}
 }
 
 @misc{team2019unblinded,
@@ -651,109 +650,109 @@
 }
 
 @article{fawaz2019deep,
-  title={Deep learning for time series classification: a review},
-  author={Fawaz, Hassan Ismail and Forestier, Germain and Weber, Jonathan and Idoumghar, Lhassane and Muller, Pierre-Alain},
-  journal={Data Mining and Knowledge Discovery},
-  volume={33},
-  number={4},
-  pages={917--963},
-  year={2019},
-  publisher={Springer}
+    title={Deep learning for time series classification: a review},
+    author={Fawaz, Hassan Ismail and Forestier, Germain and Weber, Jonathan and Idoumghar, Lhassane and Muller, Pierre-Alain},
+    journal={Data Mining and Knowledge Discovery},
+    volume={33},
+    number={4},
+    pages={917--963},
+    year={2019},
+    publisher={Springer}
 }
 
 @online{kazemnejad2019positional,
-  author = {Amirhossein Kazemnejad},
-  title = {Transformer Architecture: The Positional Encoding},
-  year = 2019,
-  url = {https://kazemnejad.com/blog/transformer_architecture_positional_encoding/},
-  urldate = {2021-03-25}
+    author = {Amirhossein Kazemnejad},
+    title = {Transformer Architecture: The Positional Encoding},
+    year = 2019,
+    url = {https://kazemnejad.com/blog/transformer_architecture_positional_encoding/},
+    urldate = {2021-03-25}
 }
 
 @article{madsen2019visualizing,
-  author = {Madsen, Andreas},
-  title = {Visualizing memorization in RNNs},
-  journal = {Distill},
-  year = {2019},
-  note = {https://distill.pub/2019/memorization-in-rnns},
-  doi = {10.23915/distill.00016}
+    author = {Madsen, Andreas},
+    title = {Visualizing memorization in RNNs},
+    journal = {Distill},
+    year = {2019},
+    note = {https://distill.pub/2019/memorization-in-rnns},
+    doi = {10.23915/distill.00016}
 }
 @misc{grosse2019nndeep,
-  author        = {Roger Grosse and Jimmy Ba},
-  title         = {Neural Networks and Deep Learning},
-  month         = {Winter},
-  year          = {2019},
-  url={https://bit.ly/2R4wLjW}
+    author        = {Roger Grosse and Jimmy Ba},
+    title         = {Neural Networks and Deep Learning},
+    month         = {Winter},
+    year          = {2019},
+    url={https://bit.ly/2R4wLjW}
 }
 
 ====== 2020 ======
 
 @article{david2020tensorflow,
-  title={Tensorflow lite micro: Embedded machine learning on tinyml systems},
-  author={David, Robert and Duke, Jared and Jain, Advait and Reddi, Vijay Janapa and Jeffries, Nat and Li, Jian and Kreeger, Nick and Nappier, Ian and Natraj, Meghna and Regev, Shlomi and others},
-  journal={arXiv preprint arXiv:2010.08678},
-  year={2020}
+    title={Tensorflow lite micro: Embedded machine learning on tinyml systems},
+    author={David, Robert and Duke, Jared and Jain, Advait and Reddi, Vijay Janapa and Jeffries, Nat and Li, Jian and Kreeger, Nick and Nappier, Ian and Natraj, Meghna and Regev, Shlomi and others},
+    journal={arXiv preprint arXiv:2010.08678},
+    year={2020}
 }
 
 @article{wang2020deep,
-  title={Deep learning for tomographic image reconstruction},
-  author={Wang, Ge and Ye, Jong Chul and De Man, Bruno},
-  journal={Nature Machine Intelligence},
-  volume={2},
-  number={12},
-  pages={737--748},
-  year={2020},
-  publisher={Nature Publishing Group}
+    title={Deep learning for tomographic image reconstruction},
+    author={Wang, Ge and Ye, Jong Chul and De Man, Bruno},
+    journal={Nature Machine Intelligence},
+    volume={2},
+    number={12},
+    pages={737--748},
+    year={2020},
+    publisher={Nature Publishing Group}
 }
 
 @misc{jones_r_lynne_2020_4048838,
-  author       = {Jones, R. Lynne and
-                  Yoachim, Peter and
-                  Ivezic, Zeljko and
-                  Neilsen, Eric H. and
-                  Ribeiro, Tiago},
-  title        = {{Survey Strategy and Cadence Choices for the Vera
-                   C. Rubin Observatory Legacy Survey of Space and
-                   Time (LSST)}},
-  month        = sep,
-  year         = 2020,
-  publisher    = {Zenodo},
-  version      = {v1.2},
-  doi          = {10.5281/zenodo.4048838},
-  url          = {https://doi.org/10.5281/zenodo.4048838}
+    author       = {Jones, R. Lynne and
+        Yoachim, Peter and
+            Ivezic, Zeljko and
+            Neilsen, Eric H. and
+            Ribeiro, Tiago},
+    title        = {{Survey Strategy and Cadence Choices for the Vera
+        C. Rubin Observatory Legacy Survey of Space and
+            Time (LSST)}},
+    month        = sep,
+    year         = 2020,
+    publisher    = {Zenodo},
+    version      = {v1.2},
+    doi          = {10.5281/zenodo.4048838},
+    url          = {https://doi.org/10.5281/zenodo.4048838}
 }
 
 @Article{harris2020array,
- title         = {Array programming with {NumPy}},
- author        = {Charles R. Harris and K. Jarrod Millman and St{'{e}}fan J.
-                 van der Walt and Ralf Gommers and Pauli Virtanen and David
-                 Cournapeau and Eric Wieser and Julian Taylor and Sebastian
-                 Berg and Nathaniel J. Smith and Robert Kern and Matti Picus
-                 and Stephan Hoyer and Marten H. van Kerkwijk and Matthew
-                 Brett and Allan Haldane and Jaime Fern{'{a}}ndez del
-                 R{'{\i}}o and Mark Wiebe and Pearu Peterson and Pierre
-                 G{'{e}}rard-Marchant and Kevin Sheppard and Tyler Reddy and
-                 Warren Weckesser and Hameer Abbasi and Christoph Gohlke and
-                 Travis E. Oliphant},
- year          = {2020},
- month         = sep,
- journal       = {Nature},
- volume        = {585},
- number        = {7825},
- pages         = {357--362},
- doi           = {10.1038/s41586-020-2649-2},
- publisher     = {Springer Science and Business Media {LLC}},
- url           = {https://doi.org/10.1038/s41586-020-2649-2}
+    title         = {Array programming with {NumPy}},
+    author        = {Charles R. Harris and K. Jarrod Millman and St{'{e}}fan J.
+        van der Walt and Ralf Gommers and Pauli Virtanen and David
+            Cournapeau and Eric Wieser and Julian Taylor and Sebastian
+            Berg and Nathaniel J. Smith and Robert Kern and Matti Picus
+            and Stephan Hoyer and Marten H. van Kerkwijk and Matthew
+            Brett and Allan Haldane and Jaime Fern{'{a}}ndez del
+            R{'{\i}}o and Mark Wiebe and Pearu Peterson and Pierre
+            G{'{e}}rard-Marchant and Kevin Sheppard and Tyler Reddy and
+            Warren Weckesser and Hameer Abbasi and Christoph Gohlke and
+            Travis E. Oliphant},
+    year          = {2020},
+    month         = sep,
+    journal       = {Nature},
+    volume        = {585},
+    number        = {7825},
+    pages         = {357--362},
+    doi           = {10.1038/s41586-020-2649-2},
+    publisher     = {Springer Science and Business Media {LLC}},
+    url           = {https://doi.org/10.1038/s41586-020-2649-2}
 }
 
 @article{gabruseva2020photometric,
-  title={Photometric light curves classification with machine learning},
-  author={Gabruseva, Tatiana and Zlobin, Sergey and Wang, Peter},
-  journal={Journal of Astronomical Instrumentation},
-  volume={9},
-  number={01},
-  pages={2050005},
-  year={2020},
-  publisher={World Scientific}
+    title={Photometric light curves classification with machine learning},
+    author={Gabruseva, Tatiana and Zlobin, Sergey and Wang, Peter},
+    journal={Journal of Astronomical Instrumentation},
+    volume={9},
+    number={01},
+    pages={2050005},
+    year={2020},
+    publisher={World Scientific}
 }
 
 @article{tay2020efficient,
@@ -771,52 +770,52 @@
 }
 
 @article{moller2020supernnova,
-  title={SuperNNova: an open-source framework for Bayesian, neural network-based supernova classification},
-  author={M{\"o}ller, Anais and de Boissi{\`e}re, Thibault},
-  journal={Monthly Notices of the Royal Astronomical Society},
-  volume={491},
-  number={3},
-  pages={4277--4293},
-  year={2020},
-  publisher={Oxford University Press}
+    title={SuperNNova: an open-source framework for Bayesian, neural network-based supernova classification},
+    author={M{\"o}ller, Anais and de Boissi{\`e}re, Thibault},
+    journal={Monthly Notices of the Royal Astronomical Society},
+    volume={491},
+    number={3},
+    pages={4277--4293},
+    year={2020},
+    publisher={Oxford University Press}
 }
 
 @online{brownlee2020imbalancemetrics,
-  author = {Jason Brownlee},
-  title = {Tour of Evaluation Metrics for Imbalanced Classification},
-  year = 2020,
-  url = {https://bit.ly/3sxqx9Y},
-  urldate = {2021-03-10}
+    author = {Jason Brownlee},
+    title = {Tour of Evaluation Metrics for Imbalanced Classification},
+    year = 2020,
+    url = {https://bit.ly/3sxqx9Y},
+    urldate = {2021-03-10}
 }
 
 @online{ychai2020params,
-  author = {Yekun Chai},
-  title = {Counting the Number of Parameters in Deep Learning},
-  year = 2020,
-  url = {https://bit.ly/3tCcsJ2},
-  urldate = {2021-04-21}
+    author = {Yekun Chai},
+    title = {Counting the Number of Parameters in Deep Learning},
+    year = 2020,
+    url = {https://bit.ly/3tCcsJ2},
+    urldate = {2021-04-21}
 }
 
 ====== 2021 ======
 @article{tekalp2021introduction,
-  title={Introduction to the Issue on Deep Learning for Image/Video Restoration and Compression},
-  author={Tekalp, A Murat and Covell, Michele and Timofte, Radu and Dong, Chao},
-  journal={IEEE Journal of Selected Topics in Signal Processing},
-  volume={15},
-  number={2},
-  pages={157--161},
-  year={2021},
-  publisher={IEEE}
+    title={Introduction to the Issue on Deep Learning for Image/Video Restoration and Compression},
+    author={Tekalp, A Murat and Covell, Michele and Timofte, Radu and Dong, Chao},
+    journal={IEEE Journal of Selected Topics in Signal Processing},
+    volume={15},
+    number={2},
+    pages={157--161},
+    year={2021},
+    publisher={IEEE}
 }
 @article{matheson2021antares,
-  title={The ANTARES astronomical time-domain event broker},
-  author={Matheson, Thomas and Stubens, Carl and Wolf, Nicholas and Lee, Chien-Hsiu and Narayan, Gautham and Saha, Abhijit and Scott, Adam and Soraisam, Monika and Bolton, Adam S and Hauger, Benjamin and others},
-  journal={The Astronomical Journal},
-  volume={161},
-  number={3},
-  pages={107},
-  year={2021},
-  publisher={IOP Publishing}
+    title={The ANTARES astronomical time-domain event broker},
+    author={Matheson, Thomas and Stubens, Carl and Wolf, Nicholas and Lee, Chien-Hsiu and Narayan, Gautham and Saha, Abhijit and Scott, Adam and Soraisam, Monika and Bolton, Adam S and Hauger, Benjamin and others},
+    journal={The Astronomical Journal},
+    volume={161},
+    number={3},
+    pages={107},
+    year={2021},
+    publisher={IOP Publishing}
 }
 @article{moller2021fink,
     title={Fink, a new generation of broker for the LSST community},
@@ -831,4 +830,4 @@
 
 @article{allam2021paying, title={Paying Attention to Astronomical Transients: Photometric
     Classification with the Time-Series Transformer}, author={\textbf{Allam Jr, Tarek} and McEwen, Jason D},
-    journal={arXiv preprint arXiv:2105.06178}, year={2021} }
+journal={arXiv preprint arXiv:2105.06178}, year={2021} }
