Add new blog post on gstreamer

--- a/src/blog/posts/2024/odai-q42024.md
+++ b/src/blog/posts/2024/odai-q42024.md
@@ -9,8 +9,9 @@ categories:
 tags:
   - git
   - vim
+slug: odai24
 ---
 
-# 💻 **On-device AI: State of Affairs in q4.2024**
+# 💻 **On-device AI Wrapped: 2024 State of Affairs**
 
 Rust-Powered TinyML: A Look at the MicroFlow Framework: https://medium.com/@felixgalindo91/a-review-of-microflow-rust-based-runtime-for-efficient-edge-ai-b889e9145be1
